<!--
  ~ Copyright 2018 Bakumon. https://github.com/Bakumon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <!--<string name="app_name">记账</string>-->

    <string name="content_des_setting">设置</string>
    <string name="content_des_statistics">统计</string>
    <string name="content_des_close">关闭</string>

    <string name="toast_add_record_fail">记账失败，请重试</string>
    <string name="toast_modify_record_fail">记录修改失败</string>
    <string name="toast_sort_fail">排序失败</string>
    <string name="toast_least_one_type">请至少保留一个类型</string>
    <string name="toast_delete_fail">删除失败</string>
    <string name="toast_type_img_fail">类型图片获取失败</string>
    <string name="toast_type_save_fail">类型保存失败</string>
    <string name="toast_type_is_exist">&#160;类型已经存在</string>
    <string name="toast_record_delete_fail">记录删除失败</string>
    <string name="toast_current_sum_money_fail">本月支出收入总数获取失败</string>
    <string name="toast_records_fail">获取记录列表失败</string>
    <string name="toast_init_types_fail">初始化类型数据失败</string>
    <string name="toast_get_types_fail">获取类型数据失败</string>
    <string name="toast_get_statistics_fail">获取统计数据失败</string>
    <string name="toast_get_month_summary_fail">获取该月汇总数据失败</string>
    <string name="toast_get_type_summary_fail">获取类型汇总数据失败</string>
    <string name="toast_not_install_market">您的手机没有安装Android应用市场</string>
    <string name="toast_not_install_alipay">谢谢，您没有安装支付宝客户端</string>
    <string name="toast_is_not_writable_external">备份失败，外部存储不可用</string>
    <string name="toast_restore_fail">恢复备份失败</string>
    <string name="toast_backup_list_fail">备份文件列表获取失败</string>
    <string name="toast_open_auto_backup">自动备份已关闭，设置界面可重新打开</string>

    <string name="hint_enter_money">输入金额</string>
    <string name="hint_enter_remark">输入备注</string>
    <string name="hint_enter_type_name">请输入类型名称</string>

    <string name="text_affirm">确定</string>
    <string name="text_symbol_outlay">-</string>
    <string name="text_symbol_income">+</string>
    <string name="text_home_footer_tip">统计页面可以查看往月记录</string>
    <string name="text_add_record">记一笔</string>
    <string name="text_modify_record">修改</string>
    <string name="text_done">完成</string>
    <string name="text_title_drag_sort">长按拖动排序</string>
    <string name="text_title_type_manage">分类管理</string>
    <string name="text_button_sort">排序</string>
    <string name="text_outlay">支出</string>
    <string name="text_income">收入</string>
    <string name="text_setting">设置</string>
    <string name="text_title_setting">设置</string>
    <string name="text_month_outlay">本月支出(¥)</string>
    <string name="text_month_income">本月收入(¥)</string>
    <string name="text_today">今天</string>
    <string name="text_yesterday">昨天</string>
    <string name="text_type_eat">餐饮</string>
    <string name="text_type_clothes">衣服</string>
    <string name="text_type_humanity">礼物</string>
    <string name="text_type_candy">零食</string>
    <string name="text_type_3c">电子产品</string>
    <string name="text_type_pet">宠物</string>
    <string name="text_type_pill">医疗</string>
    <string name="text_type_calendar">日用</string>
    <string name="text_type_pluralism">兼职</string>
    <string name="text_type_salary">薪资</string>
    <string name="text_current_month_empty_tip">本月未开始记账\n\n点击加号，开始记账</string>
    <string name="text_month_empty_tip">每一笔账单，都是生活的点滴</string>
    <string name="text_button_cancel">取消</string>
    <string name="text_button_know">我知道了</string>
    <string name="text_button_affirm_delete">确认删除</string>
    <string name="text_dialog_delete">删除</string>
    <string name="text_delete_type_note">删除该分类后，将无法在记账页选择该分类，该分类下原有账单仍保持不变</string>
    <string name="text_save">保存</string>
    <string name="text_add">添加</string>
    <string name="text_modify">修改</string>
    <string name="text_outlay_type">支出类型</string>
    <string name="text_income_type">收入类型</string>
    <string name="text_delete">删除</string>
    <string name="text_tip_type_delete">该记录的类型已经被删除，已默认选择了第一个类型</string>
    <string name="text_order">账单</string>
    <string name="text_reports">报表</string>
    <string name="text_money_symbol">¥</string>
    <string name="text_month_outlay_symbol">支出&#160;¥</string>
    <string name="text_month_income_symbol">收入&#160;¥</string>
    <string name="text_unit_account">笔</string>
    <string name="text_day">日&#160;</string>
    <string name="text_choose_month">选择月份</string>
    <string name="text_sort_time">按时间</string>
    <string name="text_sort_money">按金额</string>
    <string name="text_title_open_source">开源许可证</string>
    <string name="text_title_about">关于</string>
    <string name="toast_backup_success">备份成功</string>
    <string name="toast_backup_fail">备份失败</string>
    <string name="text_backup">立即备份</string>
    <string name="text_backup_save">备份文件将保存到/sdcard/backup_moneykeeper/MoneyKeeperBackupUser.db</string>
    <string name="text_setting_money">记账</string>
    <string name="text_setting_type_manage">收支类型管理</string>
    <string name="text_setting_backup">备份</string>
    <string name="text_go_backup">立即备份</string>
    <string name="text_setting_restore">恢复备份</string>
    <string name="text_setting_about_and_help">关于|帮助</string>
    <string name="text_about">关于</string>
    <string name="text_setting_score">评分</string>
    <string name="text_setting_donate">捐赠作者</string>
    <string name="text_privacy_policy">隐私政策</string>
    <string name="text_setting_lisence">开源许可证</string>
    <string name="text_setting_help">帮助</string>
    <string name="text_setting_good_score">给个好评呗</string>
    <string name="text_about_content">了解我们的设计理念</string>
    <string name="text_setting_auto_backup">自动备份</string>
    <string name="text_setting_go_backup_content">备份文件将保存到/sdcard/backup_moneykeeper</string>
    <string name="text_setting_restore_content">备份文件将从/sdcard/backup_moneykeeper读取</string>
    <string name="text_setting_auto_backup_content">数据有改变自动备份（建议开启）</string>
    <string name="text_restore">恢复备份</string>
    <string name="text_list_restore">以下是备份文件，点击恢复：</string>
    <string name="text_restore_tip">备份文件名带有Auto字样表示自动备份，带有User表示点击立即备份按钮手动备份，恢复之前会保存一份恢复之前的数据。</string>
    <string name="text_before_reverting">_恢复之前</string>
    <string name="text_storage">开启存储权限</string>
    <string name="text_storage_content">为了自动备份您的记账数据，需要开启存储权限。</string>
    <string name="text_open_permissions">开启权限</string>
    <string name="text_storage_permission_tip">备份相关操作需要存储权限，去设置界面开启权限</string>
    <string name="text_close_auto_backup">关闭自动备份</string>
    <string name="text_close_auto_backup_tip">关闭自动备份后，需要手动点击「立即备份」来备份数据，可能会丢失部分最新的数据。</string>
    <string name="text_tip_backup_fail">自动备份失败</string>
    <string name="text_share">分享</string>
    <string name="text_more">更多</string>
    <string name="text_dev_designer">设计和开发</string>
    <string name="text_designer">总体设计</string>
    <string name="text_developer_designer">开发和部分设计</string>
    <string name="text_icon_launcher">默默地求一波启动图设计</string>
    <string name="text_share_to">分享到</string>
    <string name="text_app_slogan">简单、纯粹的记账应用</string>
    <string name="text_share_content">我发现了一个简单、纯粹的记账应用，点击链接下载 https://github.com/Bakumon/MoneyKeeper/releases/latest</string>
</resources>
