<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.bakumon.moneykeeper.ui.add.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_home_head"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                    android:id="@+id/ibt_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_close"
                    android:contentDescription="@string/content_des_close" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_add_record"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="22sp" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_outlay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_tab_left"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_outlay"
                    android:textColor="@color/selector_tab_text_color" />

                <RadioButton
                    android:id="@+id/rb_income"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_tab_right"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/text_income"
                    android:textColor="@color/selector_tab_text_color" />
            </RadioGroup>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.hhl.recyclerviewindicator.LinePageIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                app:selectedColor="@color/colorTextWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <me.bakumon.moneykeeper.view.QMUIAlphaTextView
                    android:id="@+id/qm_tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_date"
                    android:maxLength="20"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="3dp"
                    android:text="@string/text_today"
                    android:textColor="@color/colorTextWhite2" />

                <EditText
                    android:id="@+id/edt_remark"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bg_date"
                    android:hint="@string/hint_enter_remark"
                    android:maxLines="2"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="3dp"
                    android:textColor="@color/colorTextWhite2"
                    android:textColorHint="@color/colorTextGray"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <me.bakumon.moneykeeper.view.CustomKeyboardView
            android:id="@+id/custom_Keyboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:background="@color/colorItem" />

    </LinearLayout>
</layout>