<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.bakumon.moneykeeper.ui.typemanage.TypeManageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                    android:id="@+id/ibt_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_close"
                    android:contentDescription="@string/content_des_close" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_add_record"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="22sp"
                    android:visibility="gone" />

                <RadioGroup
                    android:id="@+id/rg_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_outlay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/selector_tab_left"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/text_outlay"
                        android:textColor="@color/selector_tab_text_color" />

                    <RadioButton
                        android:id="@+id/rb_income"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/selector_tab_right"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/text_income"
                        android:textColor="@color/selector_tab_text_color" />
                </RadioGroup>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights" />

        </LinearLayout>


    </LinearLayout>
</layout>