<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Bakumon. https://github.com/Bakumon
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.bakumon.moneykeeper.ui.setting.AboutActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <include
            android:id="@+id/title_bar"
            layout="@layout/layout_title_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorTextWhite3"
                    tools:text="1.0.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_app_slogan"
                    android:textColor="@color/colorTextWhite3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/text_dev_designer"
                    android:textColor="@color/colorTextWhite3"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/avatar_markcrs" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="Markcrs"
                            android:textColor="@color/colorTextWhite"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_designer"
                            android:textColor="@color/colorTextWhite3"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@mipmap/avatar_bakumon" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="Bakumon"
                            android:textColor="@color/colorTextWhite"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_developer_designer"
                            android:textColor="@color/colorTextWhite3"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/text_icon_launcher"
                    android:textColor="@color/colorTextWhite3"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/text_more"
                    android:textColor="@color/colorTextWhite3"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="6dp"
                    android:drawableStart="@drawable/ic_privacy"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="goPrivacy"
                    android:paddingBottom="10dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/text_privacy_policy"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_share"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="share"
                    android:paddingBottom="12dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="19dp"
                    android:paddingTop="12dp"
                    android:text="@string/text_share"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawablePadding="6dp"
                    android:drawableStart="@drawable/ic_help"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:onClick="goHelp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/text_setting_help"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>