<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <merge>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            tools:background="@color/colorPrimary">

            <me.bakumon.moneykeeper.view.QMUIAlphaImageButton
                android:id="@+id/ibt_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_close"
                android:contentDescription="@string/content_des_close" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:text="记一笔"
                android:textColor="@color/colorTextWhite"
                android:textSize="21sp" />

            <me.bakumon.moneykeeper.view.QMUIAlphaTextView
                android:id="@+id/tv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                tools:text="完成"
                android:textColor="@color/colorTextWhite" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            tools:background="@color/colorPrimary"
            tools:checkedButton="@id/rb_outlay">

            <RadioButton
                android:id="@+id/rb_outlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_tab_left"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_outlay"
                android:textColor="@color/selector_tab_text_color" />

            <RadioButton
                android:id="@+id/rb_income"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_tab_right"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/text_income"
                android:textColor="@color/selector_tab_text_color" />
        </RadioGroup>
    </merge>
</layout>